--- a/flies.html
+++ b/flies.html
@@ -92,7 +92,7 @@
         <li class="breadcrumb-item">
             <a href="index.html">Home</a>
         </li>
-        <li class="breadcrumb-item active">Ants</li>
+        <li class="breadcrumb-item active">Flies</li>
     </ol>
 
     <!-- Project One -->
