--- a/index.html
+++ b/index.html
@@ -76,9 +76,10 @@
               <a class="dropdown-item" href="ants.html">Ants</a>
               <a class="dropdown-item" href="portfolio-2-col.html">Bed Bugs</a>
               <a class="dropdown-item" href="portfolio-3-col.html">Cockroaches</a>
+              <a class="dropdown-item" href="fleas.html">Fleas</a>
               <a class="dropdown-item" href="flies.html">Flies</a>
-              <a class="dropdown-item" href="portfolio-4-col.html">Mosquitoes</a>
-              <a class="dropdown-item" href="portfolio-4-col.html">Rodents</a>
+              <a class="dropdown-item" href="mosquitoes.html">Mosquitoes</a>
+              <a class="dropdown-item" href="rodents.html">Rodents</a>
               <a class="dropdown-item" href="portfolio-4-col.html">Stinging Pests</a>
               <a class="dropdown-item" href="portfolio-4-col.html">Termites</a>
               <a class="dropdown-item" href="portfolio-4-col.html">Other Pests</a>
@@ -127,9 +128,20 @@
               <a class="dropdown-item" href="pricing.html">Pricing Table</a>
             </div>
           </li-->
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">Why Calvert?</a>
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Why Calvert?
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+              <a class="dropdown-item" href="about.html">About Us</a>
+              <!--a class="dropdown-item" href="mammals.html">Clients</a>
+              <a class="dropdown-item" href="reptiles.html">Veteran Owned</a>
+
+              <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a-->
+            </div>
           </li>
+
           <li class="nav-item">
             <a class="nav-link" href="https://twitter.com/CalvrtXtermin8r"><i class="fa fa-twitter"></i></a>
           </li>
