Added info for spdiers, rodents, and mosquitoes

--- a/termites.html
+++ b/termites.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Mosquitoes</title>
+    <title>Termites</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -82,14 +82,14 @@
 
     <!-- Page Heading/Breadcrumbs -->
     <h1 class="mt-4 mb-3">Pest Index
-        <small>Mosquitoes</small>
+        <small>Termites</small>
     </h1>
 
     <ol class="breadcrumb">
         <li class="breadcrumb-item">
             <a href="index.html">Home</a>
         </li>
-        <li class="breadcrumb-item active">Mosquitoes</li>
+        <li class="breadcrumb-item active">Termites</li>
     </ol>
 
     <!-- Portfolio Item Row -->
@@ -101,18 +101,20 @@
 
         <div class="col-md-4">
             <h3 class="my-3">Pest Description</h3>
-            <p>Mosquitoes are tiny parasitic flies that suck the blood of humans and animals alike.
-                They are common in warm, humid areas and are seeing increased numbers following mild winters
-                that would usually reduce them. Due to feeding on humans and animals, they can act as a vessel
-                of transferring deadly diseases, including Malaria and Zika Virus, to humans like sharing a needle.
-                There is a disputed claim that almost half all people who have lived, 53.5 billion,
-                have died of some form of mosquito-spread disease, making them the deadliest animal on Earth.</p>
+            <p>Termites are small insects that organize into colonies and eat wood for the cellulose in it,
+                causing more damage in higher frequency to United States homes per year than any other natural disasters.
+                When termites have found their way into the walls of a home, they will eat away at the wood of walls and foundation in order to
+                grow the tunnels of their colony while using wood as food to reproduce. An average colony of 60,000 termites can consume an entire
+                2x4 plank of wood in 6 months. Most termite infestations go unnoticed for months, if not years, during which termites are free to
+                eat away at the home's most important structural components.</p>
             <h3 class="my-3">Characteristics</h3>
             <ul>
-                <li>Small, red, itchy bites on skin</li>
-                <li>0.4 in. length</li>
+                <li>Look like white ants with a head and cigar-shaped body</li>
+                <li>Two sets of wings of equal length</li>
+                <li>Prefer damp, humid areas</li>
+                <li>Infestations begin during the spring</li>
             </ul>
-            <h3 class="my-3">Diseases</h3>
+            <!--h3 class="my-3">Diseases</h3>
             <ul>
                 <li>West Nile Virus</li>
                 <li>Zika Virus</li>
@@ -124,7 +126,7 @@
                 <li>La Crosse Encephalitis</li>
                 <li>St. Louis Encephalitis</li>
                 <li>Yellow Fever</li>
-            </ul>
+            </ul-->
         </div>
 
     </div>
