--- a/index.html
+++ b/index.html
@@ -74,14 +74,15 @@
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
               <a class="dropdown-item" href="ants.html">Ants</a>
-              <a class="dropdown-item" href="portfolio-2-col.html">Bed Bugs</a>
+              <a class="dropdown-item" href="bed-bugs.html">Bed Bugs</a>
               <a class="dropdown-item" href="portfolio-3-col.html">Cockroaches</a>
               <a class="dropdown-item" href="fleas.html">Fleas</a>
               <a class="dropdown-item" href="flies.html">Flies</a>
               <a class="dropdown-item" href="mosquitoes.html">Mosquitoes</a>
               <a class="dropdown-item" href="rodents.html">Rodents</a>
               <a class="dropdown-item" href="portfolio-4-col.html">Stinging Pests</a>
-              <a class="dropdown-item" href="portfolio-4-col.html">Termites</a>
+              <a class="dropdown-item" href="termites.html">Termites</a>
+              <a class="dropdown-item" href="spiders.html">Spiders</a>
               <a class="dropdown-item" href="portfolio-4-col.html">Other Pests</a>
 
               <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>
