--- a/spiders.html
+++ b/spiders.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Rodents</title>
+    <title>Spiders</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -82,20 +82,20 @@
 
     <!-- Page Heading/Breadcrumbs -->
     <h1 class="mt-4 mb-3">Pest Index
-        <small>Rodents</small>
+        <small>Spiders</small>
     </h1>
 
     <ol class="breadcrumb">
         <li class="breadcrumb-item">
             <a href="index.html">Home</a>
         </li>
-        <li class="breadcrumb-item active">Rodents</li>
+        <li class="breadcrumb-item active">Spiders</li>
     </ol>
 
     <!-- Rodents -->
     <div class="card text-white bg-primary my-5 py-4 text-center">
         <div class="card-body">
-            <h1 class="thick">House Mice</h1>
+            <h1 class="thick">Black Widow Spider</h1>
             <p class="text-white m-0"></p>
         </div>
     </div>
@@ -109,28 +109,48 @@
         <div class="col-md-4">
             <!--h3 class="my-3">Pest Description</h3-->
             <h3 class="thick">Pest Description</h3>
-            <p>House mice are the most common breed of mouse in the United States and can enter homes through holes as small as a dime.
-            Once inside a house, they travel through small cracks, seeking food and leaving droppings that spread germs. House mice carry
-            other pests such as fleas, lice, mites, and ticks.</p>
+            <p>The adult female Black Widow Spider is the most poisonous spider in North America and is common in Maryland, but rarely found indoors.
+                They are most frequently found in basement windowsills, beneath benches and porches, in garages, sheds, wood piles, and rock piles.
+                Laying up to 400 eggs at once, they will often eat their young as well as beetles, flies, grasshoppers, moths, and other spiders caught in their thick webs. Black Widows
+                are nocturnal and only bite when disturbed.
+                Their bites resemble to long fang marks and quickly lead to severe pain, burning, swelling, and redness at the bite. If bitten do not panic, wash bite with soap and water
+                to prevent infection and take the victim to a hospital if they are a child or if muscle cramp develop.
+            </p>
             <h3 class="my-3">Characteristics</h3>
             <ul>
-                <li>Light brown</li>
-                <li>2 in. size, round in shape</li>
+                <li>
+                    Female: 1.5 in. long
+                    <ul>
+                        <li>Shiny, black globe abdomen</li>
+                        <li>Bigger body, smaller legs</li>
+                        <li>Red or orange hourglass on underside</li>
+                        <li>VENOMOUS</li>
+                    </ul>
+                </li>
+
+                <li>Male: 0.75 in. long
+                    <ul>
+                        <li>Shiny, black globe abdomen</li>
+                        <li>Smaller body, longer legs</li>
+                        <li>Yellow and red bands and spots on back</li>
+                    </ul>
+                </li>
             </ul>
-            <h3 class="my-3">Diseases</h3>
+            <h3 class="my-3">Symptoms</h3>
             <ul>
-                <li>Hantavirus Pulmonary Syndrome (HPS)</li>
-                <li>Lymphocytic Choriomeningitis (LCM)</li>
-                <li>Bubonic Plague</li>
-                <li>Tularemia</li>
-                <li><a href="https://www.cdc.gov/rodents/diseases/direct.html">More</a></li>
+                <li>Nausea or vomiting</li>
+                <li>Difficulty breathing</li>
+                <li>Severe abdominal pain</li>
+                <li>Excessive sweating</li>
+                <li>Rash</li>
+                <li><a href="https://www.cdc.gov/niosh/topics/spiders/symptoms.htmll">More</a></li>
             </ul>
         </div>
     </div>
 
     <div class="card text-white bg-primary my-5 py-4 text-center">
         <div class="card-body">
-            <h1>Deer Mice</h1>
+            <h1>Brown Recluse Spider</h1>
             <p class="text-white m-0"></p>
         </div>
     </div>
@@ -143,20 +163,32 @@
 
         <div class="col-md-4">
             <h3 class="my-3">Pest Description</h3>
-            <p>Deer mice typically live outside in hollow logs or debris piles, but will also enter homes and stay in garages, attics, and small crawlspaces.
-            They carry a dangerous disease called Hantavirus Pulmonary Syndrome (HPS), which is spread through their carcasses or by inhaling urine droplets of said carcasses.</p>
+            <p>Brown Recluse Spiders are identified by the violin pattern on their backs and tend to seek dark, warm, dry environments such as
+            barns, porches, sheds, closets, basements, woodpiles, and storage areas. They are generally non-aggressive, but will bite if
+            threatened. Their bites resemble two long fang marks and systems tend to manifest between 3 to 8 hours after being bitten, with
+                the area around the bite being either dry, bluish, redness around a pale center, or a central blister. If the victim experiences
+                chills, dizziness, fever, rash, or vomiting they should seek emergency medical attention immediately. This is more common in children
+                and the elderly.
+            </p>
             <h3 class="my-3">Characteristics</h3>
             <ul>
-                <li>Brown with white feet and underbelly</li>
-                <li>5 to 8 in. size, round in shape</li>
+                <li>Yellowish tan with violin pattern on back</li>
+                <li>0.25 in. long body, 1 in. long legs</li>
+                <li>VENOMOUS</li>
             </ul>
-            <h3 class="my-3">Diseases</h3>
+            <h3 class="my-3">Symptoms</h3>
             <ul>
-                <li>Hantavirus Pulmonary Syndrome (HPS)</li>
-                <li>Lymphocytic Choriomeningitis (LCM)</li>
-                <li>Bubonic Plague</li>
-                <li>Tularemia</li>
-                <li><a href="https://www.cdc.gov/rodents/diseases/direct.html">More</a></li>
+                <li>Dry, bluish, central blister with ring of redness around pale center.</li>
+                <li>Severe
+                    <ul>
+                        <li>Chills</li>
+                        <li>Dizziness</li>
+                        <li>Fever</li>
+                        <li>Rash</li>
+                        <li>Vomiting</li>
+                    </ul>
+                </li>
+                <li><a href="https://www.cdc.gov/niosh/topics/spiders/types.html">More</a></li>
             </ul>
         </div>
 
@@ -165,7 +197,7 @@
 
     <div class="card text-white bg-primary my-5 py-4 text-center">
         <div class="card-body">
-            <h1>Norway Rats</h1>
+            <h1>Wolf Spider</h1>
             <p class="text-white m-0"></p>
         </div>
     </div>
@@ -177,59 +209,31 @@
 
         <div class="col-md-4">
             <h3 class="my-3">Pest Description</h3>
-            <p>Norway rats typically live outdoors in woodpiles and fields found in farmland, but have adapted to more urban areas where they seek out sewers and areas with garbage.
-            They enter homes by locating and gnawing or digging at entryways as small as a nickel. Once they have entered a home, they will damage property with their gnawing teeth and
-            spread disease through their droppings as they seek out food.</p>
+            <p>Wolf Spiders live close to ground level in outdoor environments such as gardens or houseplants. Unlike most spiders,
+                they hunt by burrowing into the ground and attacking prey instead of using webs. They are nocturnal and
+                move quickly when disturbed. They tend to burrow into the ground when threatened but will sometimes bite if provoked.
+                Their bite is poisonous, painful, and resembles a red, itchy bump similar to most bug bites that usually goes away after three days.
+                Some victims experience allergic reactions with symptoms including a red line extending from the bite, the bump growing, swelling in face,
+                difficulty breathing, dizziness or unconsciousness. Seek immediate medical attention if you experience such systems.</p>
             <h3 class="my-3">Characteristics</h3>
             <ul>
-                <li>Dark brown or gray</li>
-                <li>10 to 12 in. size, long in shape</li>
+                <li>Dark brown and gray with hairy body</li>
+                <li>0.5 in. size, segmented and oval in shape</li>
+                <li>NON-VENOMOUS</li>
             </ul>
-            <h3 class="my-3">Diseases</h3>
+            <h3 class="my-3">Symptoms</h3>
             <ul>
-                <li>Hantavirus Pulmonary Syndrome (HPS)</li>
-                <li>Salmonellosis</li>
-                <li>Bubonic Plague</li>
-                <li>Tularemia</li>
-                <li><a href="https://www.cdc.gov/rodents/diseases/direct.html">More</a></li>
-            </ul>
-        </div>
-
-    </div>
-    <!-- /.row -->
-
-    <div class="card text-white bg-primary my-5 py-4 text-center">
-        <div class="card-body">
-            <h1>Roof Rats</h1>
-            <p class="text-white m-0"></p>
-        </div>
-    </div>
-    <!-- Portfolio Item Row -->
-    <div class="row">
-        <div class="col-md-8">
-            <img class="img-fluid" src="http://placehold.it/750x500" alt="">
-        </div>
-
-        <div class="col-md-4">
-            <h3 class="my-3">Pest Description</h3>
-            <p>Roof rats typically live in the upper levels of homes and businesses, but will also live under buildings. Despite having poor vision, they excel in hearing, touch, taste, and smell
-                and will use these heightened senses to seek out any food they can find. They will eat anything they can find and will chew through whatever they can to reach food. Rats are commonly
-                seen as spreaders of disease due to the Bubonic Plague, also known as the Black Death, which killed 25 million people, almost 1/3rd of Europe's population, during the 14th century. Roof
-                rats are the species in question that spread the plague through the ticks on their bodies, and they still spread similar diseases today.</p>
-            <h3 class="my-3">Characteristics</h3>
-            <ul>
-                <li>Black</li>
-                <li>16 in. size, long and oval in shape</li>
-            </ul>
-            <h3 class="my-3">Diseases</h3>
-            <ul>
-                <li>Hantavirus Pulmonary Syndrome (HPS)</li>
-                <li>Rat-bite fever</li>
-                <li>Bubonic Plague</li>
-                <li>Septicemic plague</li>
-                <li>Pneumonic plague</li>
-                <li>Rabies</li>
-                <li><a href="https://www.cdc.gov/rodents/diseases/direct.html">More</a></li>
+                <li>Red, itchy bump.</li>
+                <li>Allergic Reaction
+                    <ul>
+                        <li>Red line extending from bite (blood poisoning)</li>
+                        <li>Bump growth</li>
+                        <li>Swelling in face</li>
+                        <li>Difficulty breathing</li>
+                        <li>Dizziness</li>
+                    </ul>
+                </li>
+                <li><a href="https://www.medicalnewstoday.com/articles/324058#identification">More</a></li>
             </ul>
         </div>
 
